--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.TutorialSplash" parent="Base.Theme.TutorialSplash" />
+    
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:drawable">@drawable/splash_background</item>
+    </style>
 </resources>
