--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -6,7 +6,9 @@
 
     <item>
 
-        <bitmap android:src="@drawable/baseline_biotech_24"/>
+        <bitmap
+            
+            android:src="@drawable/acura" />
 
     </item>
 
