--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Splash"
+        android:text="@string/splash"
         android:textSize="40sp"
         android:textStyle="bold|italic"
         android:textColor="@color/white"
