--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list android:opacity="opaque"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:opacity="opaque">
 
-    <item android:drawable="@color/orange"/>
+    <item android:drawable="@color/orange" />
 
-    <item>
+    <item
+        android:bottom="150dp"
+        android:left="150dp"
+        android:right="150dp"
+        android:top="150dp">
 
-        <bitmap
-            
-            android:src="@drawable/acura" />
+        <bitmap android:src="@drawable/acura" />
 
     </item>
 
