--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,6 @@
     <style name="Theme.TutorialSplash" parent="Base.Theme.TutorialSplash" />
     
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:drawable">@drawable/splash_background</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 </resources>
